[package]
name = "moonbeam-primitives-ext"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
ethereum-types = { workspace = true }

# Moonbeam
evm-tracing-events = { workspace = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

[features]
default = [ "std" ]
std = [
	"ethereum-types/std",
	"evm-tracing-events/std",
	"parity-scale-codec/std",
	"sp-externalities/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
