[package]
name = "xcm-primitives"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
ethereum = { workspace = true, features = [ "with-codec" ] }
ethereum-types = { workspace = true }
hex = { workspace = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true, features = [ "derive" ] }
sha3 = { workspace = true }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

# Cumulus
cumulus-primitives-core = { workspace = true }

# Polkadot / XCM
orml-traits = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"hex/std",
	"parity-scale-codec/std",
	"serde/std",
	"sha3/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm/std",
]
runtime-benchmarks = []
