[package]
name = "moonbeam-runtime-common"
authors = { workspace = true }
description = "Common code shared between runtimes"
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
version = "0.8.0-dev"

[dependencies]
hex-literal = "0.3.4"
impl-trait-for-tuples = "0.2.1"
log = "0.4"

# Moonbeam
moonbeam-xcm-benchmarks = { workspace = true, optional = true }
pallet-asset-manager = { workspace = true }
pallet-author-mapping = { workspace = true }
pallet-ethereum-xcm = { workspace = true }
pallet-migrations = { workspace = true }
pallet-parachain-staking = { workspace = true }
pallet-randomness = { workspace = true }
pallet-xcm-transactor = { workspace = true }
precompile-utils = { workspace = true }
xcm-primitives = { workspace = true }

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

# Frontier
fp-ethereum = { workspace = true }
fp-evm = { workspace = true }
pallet-base-fee = { workspace = true }
pallet-evm = { workspace = true, features = [ "forbid-evm-reentrancy" ] }

# Nimbus
pallet-author-inherent = { workspace = true }
pallet-author-slot-filter = { workspace = true }

# Polkadot
xcm = { workspace = true }
xcm-executor = { workspace = true }

[features]
std = [
	"fp-ethereum/std",
	"fp-evm/std",
	"frame-support/std",
	"pallet-asset-manager/std",
	"pallet-author-inherent/std",
	"pallet-author-mapping/std",
	"pallet-base-fee/std",
	"pallet-ethereum-xcm/std",
	"pallet-evm/std",
	"pallet-migrations/std",
	"pallet-parachain-staking/std",
	"pallet-randomness/std",
	"pallet-referenda/std",
	"pallet-scheduler/std",
	"pallet-xcm-transactor/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [ "pallet-ethereum-xcm/runtime-benchmarks", "pallet-referenda/runtime-benchmarks" ]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-migrations/try-runtime",
]
