[package]
name = "moonbeam-relay-encoder"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[dependencies]

# Moonbeam
pallet-evm-precompile-relay-encoder = { workspace = true }
xcm-primitives = { workspace = true }

# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

# Cumulus
cumulus-primitives-core = { workspace = true }

# Polkadot
xcm = { workspace = true }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

kusama-runtime = { workspace = true }
polkadot-runtime = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
rococo-runtime = { workspace = true }
westend-runtime = { workspace = true }

[features]
default = [ "std" ]
std = [
	"cumulus-primitives-core/std",
	"frame-system/std",
	"pallet-evm-precompile-relay-encoder/std",
	"pallet-staking/std",
	"parity-scale-codec/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-primitives/std",
]
