[package]
name = "moonbeam-rpc-debug"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
futures = { workspace = true, features = [ "compat" ] }
hex-literal = { workspace = true }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
tokio = { workspace = true, features = [ "sync", "time" ] }

# Moonbeam
moonbeam-client-evm-tracing = { workspace = true }
moonbeam-rpc-core-debug = { workspace = true }
moonbeam-rpc-core-types = { workspace = true }
moonbeam-rpc-primitives-debug = { workspace = true, features = [ "std" ] }

# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

# Frontier
ethereum = { workspace = true, features = [ "std", "with-codec" ] }
ethereum-types = { workspace = true, features = [ "std" ] }
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-rpc = { workspace = true, features = [ "rpc-binary-search-estimate" ] }
fp-rpc = { workspace = true, features = [ "std" ] }
