[package]
name = "moonbeam-finality-rpc"
authors = { workspace = true }
description = "An experimental RPC to check for block and transaction finality in the moonbeam parachain"
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
futures = { workspace = true, features = [ "compat" ] }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
parity-scale-codec = { workspace = true, features = [ "std" ] }
tokio = { workspace = true, features = [ "sync", "time" ] }

fc-db = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.29" }
fc-rpc = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.29" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
