[package]
name = "moonbeam-rpc-trace"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.6.0"

[dependencies]
ethereum = { workspace = true, features = [ "with-codec" ] }
ethereum-types = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
serde = { workspace = true, features = [ "derive" ] }
sha3 = { workspace = true }
tokio = { workspace = true, features = [ "sync", "time" ] }
tracing = { workspace = true }

# Moonbeam
moonbeam-client-evm-tracing = { workspace = true }
moonbeam-rpc-core-trace = { workspace = true }
moonbeam-rpc-core-types = { workspace = true }
moonbeam-rpc-primitives-debug = { workspace = true }

# Substrate
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

# Frontier
fc-consensus = { workspace = true }
fc-rpc = { workspace = true, features = [ "rpc-binary-search-estimate" ] }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
fp-rpc = { workspace = true }
