[package]
name = "moonbeam-rpc-txpool"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.6.0"

[dependencies]
jsonrpsee = { workspace = true, features = [ "macros", "server" ] }
rlp = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
sha3 = { workspace = true }

# Moonbeam
moonbeam-rpc-core-txpool = { workspace = true }
moonbeam-rpc-primitives-txpool = { workspace = true, features = [ "std" ] }

# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29" }

# Frontier
ethereum-types = { workspace = true, features = [ "std" ] }
fc-rpc = { workspace = true }
