[package]
name = "moonbeam-rpc-primitives-debug"
authors = { workspace = true }
edition = "2021"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
environmental = { workspace = true }
ethereum = { workspace = true }
ethereum-types = { workspace = true }
hex = { workspace = true, optional = true, features = [ "serde" ] }
serde = { workspace = true, optional = true, features = [ "derive" ] }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false }

[features]
default = [ "std" ]
std = [
	"environmental/std",
	"ethereum-types/std",
	"ethereum/std",
	"hex",
	"parity-scale-codec/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
